# transcript-router

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
examples/: run_demo.py  transcript-router.service
src/transcript_router/: __init__.py  config.py  logging.py  models.py  pipeline.py
src/transcript_router/classifier/: __init__.py  classifier.py
src/transcript_router/router/: __init__.py  router.py
src/transcript_router/sources/: __init__.py  base.py  mock.py
tests/: conftest.py  test_classifier.py  test_end_to_end.py  test_mock_source.py  test_router.py
